fix--table text align, add text-align:center in table

--- a/semana-2/bugfixes/index.css
+++ b/semana-2/bugfixes/index.css
@@ -123,6 +123,7 @@ input[name="search"]{
 }
 
 table {
+    text-align: center;
     width: 60%;
     margin: auto;
 }
